--- a/arrays/exercises/palindromes/palindrome.html
+++ b/arrays/exercises/palindromes/palindrome.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <<title>DOM manipulation</title>
         <link rel="stylesheet" href="style.css" type="text/css" />
-        <script src="exercises.js" defer></script>
-        <script src="./calculator/calculator.js" defer></script>
+        <script src="palindromes.js" defer></script>
     </head>
     <body>
          <h1>Arrays</h1>
