Thre ways to add event listeners

--- a/dom/index2.html
+++ b/dom/index2.html
@@ -7,7 +7,7 @@
         <script src="dom2.js" defer></script>
     </head>
     <body>
-         <h1 id="heading">
+         <h1 id="heading" onclick="this.textContent= 'Hey.. you click me baby!'">
             THE TITLE OF YOUR WEBPAGE
           </h1>
           
