using setIterval to display a dinamic figure

--- a/dom/index2.html
+++ b/dom/index2.html
@@ -39,5 +39,7 @@
            <div id="mouseEvents2" onmousedown="msDown(this)" onmouseup="msUp(this)" 
            style="background-color: red; color: white">Click me</div>
            
+           <img id="billar" src="images/1.png" height="50px" width="50px"></img>
+           
     </body>
 </html>
