--- a/dom/jquery/index.html
+++ b/dom/jquery/index.html
@@ -9,6 +9,11 @@
     <body>
         <h1>JQuery</h1>
         <h2 id="heading2">This is JQuery</h2>
+        <p class="para">1st paragraph</p>
+        <p class="para">2nd paragraph</p>
+        
+        <button id="hideHeading">Hide heading 2</button>
+        <button id="hidePara">Hide paragraphs</button>
         <ul id="books">
             <li>Harry Potter</li>
             <li>La iliada</li>
