--- a/form-validation/story/index.html
+++ b/form-validation/story/index.html
@@ -16,19 +16,19 @@
       <hr>
       <form action="story.html" method="GET">
         <label for="animal-1">Animal:</label>
-        <input id="animal-1" type="text" name="animal-1" required placeholder="cat">
+        <input id="animal-1" type="text" name="animal-1" required placeholder="cat" maxlength="15">
         <br>
         <label for="animal-2">Another animal:</label>
-        <input id="animal-2" type="text" name="animal-2" required>
+        <input id="animal-2" type="text" name="animal-2" required placeholder="dog" maxlength="15">
         <br>
         <label for="animal-3">One more Animal:</label>
-        <input id="animal-3" name="animal-3" type="text" required>
+        <input id="animal-3" name="animal-3" type="text" required placeholder="fox" maxlength="15">
         <br>
         <label for="adj-1">Adjective (ends in -ed):</label>
-        <input id="adj-1" name="adj-1" type="text" required>
+        <input id="adj-1" name="adj-1" type="text" required placeholder="exhuasted, excited, depressed..." maxlength="15">
         <br>
         <label for="verb-1">Verb (ends in -ing):</label>
-        <input id="verb-1" name="verb-1" type="text" required>
+        <input id="verb-1" name="verb-1" type="text" required placeholder="playing, seeing..." maxlength="15">
         <br>
         <label for="num-1">Number:</label>
         <input id="num-1" name="num-1" type="number" required min="1" max="10">
@@ -55,7 +55,7 @@
           </datalist>
         <br>
         <label for="message">Meaningful Message:</label>
-        <textarea id="message" name="message" required rows="8" cols="40"></textarea>
+        <textarea id="message" name="message" required rows="8" cols="40" placeholder="Follow your passion." minlength="10" maxlength="250"></textarea>
         <br>
         <input type="submit" value="Form My Story">
       </form>
